# Emotion-Recognition-API

./: .gitignore  HoreKA.md  pyproject.toml  run_app.slurm  run_app_janus.slurm  run_vllm.slurm  run_vllm_7B.slurm
emotion-recognition-API/: config.yaml  config_loader.py  console_logging.py  main.py
emotion-recognition-API/emotionRecognition/: emootion_analyser_utils.py  emotion_recognition.py  janus_emotion_analyser.py  qwen_emotion_analyse.py
emotion-recognition-API/endpoints/: analysis.py  image_analysis.py  stream_analysis.py
emotion_recognition_api/: config.yaml  config_loader.py  main.py
emotion_recognition_api/emotionRecognition/: emootion_analyser_utils.py  emotion_analyser.py  emotion_recognition.py  janus_emotion_analyser.py  loading_emotion_analyser.py  qwen_emotion_analyse.py
emotion_recognition_api/endpoints/: analysis.py  model.py  stream_analysis.py
logs/: output_2914668.txt
