[project]
name = "emotion-recognition-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorenz Neugebauer",email = "uwlat@student.kit.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "torch (==2.5.1)",
    "qwen-vl-utils (>=0.0.10,<0.0.11)",
    "torchvision (==0.20.1)",
    "accelerate (>=1.3.0,<2.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "attrdict (>=2.0.1,<3.0.0)",
    "einops (>=0.8.0,<0.9.0)",
    "timm (>=0.9.16)",
    "janus (>=2.0.0,<3.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "vllm (>=0.7.2)",
    "transformers @ git+https://github.com/huggingface/transformers@f3f6c86582611976e72be054675e2bf0abb5f775",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["emotion_recognition_api"]